# clime

./: .clang-format  LICENSE  README.md  clime.hpp
example/: CMakeLists.txt  clime_example.cpp
